--- a/src/main/webapp/html/notejava.css
+++ b/src/main/webapp/html/notejava.css
@@ -3,8 +3,51 @@ body{
     background-color: #efefef;
 }
 
+a {
+    cursor:pointer;
+}
+
 .nav-bar a{
     font-size: 14px;
     line-height: 3;
     color: #636363;
+}
+
+.search_input{
+    margin: 0 auto;
+    text-align: center;
+    #padding: 25px 0 25px;
+    #position: relative;
+}
+
+.search_value{
+    width: 100%;
+    height: 30px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    color: #556566;
+    outline: none;
+    padding-left: 20px;
+    /*width: 210px;
+    height: 30px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    color: #556566;
+    outline: none;
+    padding-left: 30px;*/
+}
+
+.search_btn{
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 100%;
+    height: 30px;
+    /*position: absolute;
+    background-image: url('/static/images/search.png');
+    width: 23px;
+    height: 23px;
+    border: none;
+    background-color: white;
+    top: 36%;
+    right: 11%;*/
 }
